fixed footer spacing.

--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -776,7 +776,7 @@ hgroup {
   @include font-myriadpro;
   font-size: 12px;
   color: #EAE6CD;
-  width: 233px;
+  width: 240px;
   line-height: 16px;
 }
 
